<->
<img src="http://openclipart.org/image/100px/svg_to_png/164299/elvis.png" alt="Elvis" title="Elvis by luchapress (/user-detail/luchapress)" />31 мая играем в "Рок-сити клуб", в том, который открылся вместо быдлодискотеки "Турист". Обещали, что кондиционеры заработают как раз 31-го. Так что будем открывать климатконтроль. Начало в 20:00. Кто придёт до 19:00 - проход бесплатно. Можно будет бесплатно разжиться свежевыпущенным EP. Велкоме!
<->
Ура! Нетлейбл <a href="http://blocsonic.com" title="blocSonic">blocSonic</a> выпустил наш мини альбом! Просмотреть и загрузить его вместе с превосходным буклетом и обложкой в трёх вариантах &lt;английском/русском/транслите&gt; можно по <a href="http://blocsonic.com/releases/show/gryaznyj-albom" title="blocSonic release">этому</a> адресу или в разделе <a href="music">ФАЙЛЫ</a> этого сайта.
<->
8 мая наш мини-альбом выходит на нетлейбле <a href="http://blocsonic.com" title="blocSonic" />blocSonic</a> - отличном ресурсе с великолепными релизами, расположенным в штате Мэн, США. Мы рады, что наша музыка нравится людям не только в России!