@@ -25,13 +25,15 @@ div.ywp-common-tooltip {display:none;}
             <div class="cover"><a href="../photo/cover_en.jpg" rel="prettyPhoto[pp_gal]" title="Cover"><img src="../image/cover_en.png" title="Cover" /></a></div>
   <h1>Music</h1>
          <ul class="music_content">
-            <li><a href="../audio/ne_parish.mp3" title="Ne parish">Ne parish</a></li>
-            <li><a href="../audio/natasha.mp3" title="Natasha">Natasha</a></li>
-            <li><a href="../audio/gop_stop.mp3" title="Gop-Stop">Gop-Stop</a></li>
-            <li><a href="../audio/bespontovy.mp3" title="Bespontovy">Bespontovy</a></li>
-            <li><a href="../audio/nishtyaki.mp3" title="Nishtyaki">Nishtyaki</a></li>
+            <li><a href="../audio/ne_parish.mp3" title="Ne parish">Ne parish &lt;You Not Stir Me Up&gt;</a></li>
+            <li><a href="../audio/natasha.mp3" title="Natasha">Natasha &lt;Natasha&gt;</a></li>
+            <li><a href="../audio/gop_stop.mp3" title="Gop-Stop">Gop-Stop &lt;Stick Up&gt;</a></li>
+            <li><a href="../audio/bespontovy.mp3" title="Bespontovy">Bespontovy &lt;Crumby&gt;</a></li>
+            <li><a href="../audio/nishtyaki.mp3" title="Nishtyaki">Nishtyaki &lt;The Kewl Things&gt;</a></li>
             <li><a href="../audio/dovesok.mp3" title="Dovesok(outro)">Dovesok &lt;outro&gt;</a></li>
-            <li><a href="../audio/bespontovy_remix.mp3" title="Bespontovy(remix)">Bespontovy &lt;dance-remix&gt;</a></li>
+            <li><a href="../audio/bespontovy_remix.mp3" title="Bespontovy (dance-remix)">Bespontovy &lt;dance-remix&gt;</a></li>
+            <li><a href="../audio/vpopolam_vs_lekseich_nishtyaki.mp3" title="Nishtyaki (remix)">Nistyaki &lt;Vpopolam vs. Lekseich&gt;</a></li>
+            
             </br>
             <li><a href="http://blocsonic.com/releases/archiveclick/slug/blocsonic-maxbloc-bsmx0032--all-tracks-320kbs-mp3-includes-pdf-booklet" title="Full album in 320 kbps MP3">Download full album in MP3 &lt;320kbps&gt;+cover+booklet</a><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img alt="Creative Commons License" style="border-width:0; margin-left: 10px;" src="http://i.creativecommons.org/l/by-nc-nd/3.0/80x15.png" /></a></li>
             <li><a href="http://blocsonic.com/releases/archiveclick/slug/blocsonic-maxbloc-bsmx0032--all-tracks-ogg-includes-pdf-booklet" title="Full album in OGG">Download full album in OGG+cover+booklet</a><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img alt="Creative Commons License" style="border-width:0; margin-left: 10px;" src="http://i.creativecommons.org/l/by-nc-nd/3.0/80x15.png" /></a></li>
@@ -50,8 +52,13 @@ div.ywp-common-tooltip {display:none;}
 
 <div id="video">
 <h1>Videos</h1>
-<a href="https://www.youtube.com/watch?v=lv0QlKiBCGE" rel="prettyPhoto" title="Natasha"><img src="../photo/thumbs/youtube_natasha.jpg" alt="From old recordings" width="128" /></a>
-
+<a href="https://www.youtube.com/watch?v=lv0QlKiBCGE" rel="prettyPhoto" title="Natasha"><img src="http://dl.dropbox.com/u/939165/camera_icon.png" alt="From old recordings" width="48" /></a>
+<a href="https://www.youtube.com/watch?v=BCt1bWbNZ7k" rel="prettyPhoto" title="Stolby (Poles)"><img src="http://dl.dropbox.com/u/939165/camera_icon.png" alt="Concert in RockCity Club, Bryansk" width="48" /></a>
+<a href="https://www.youtube.com/watch?v=grrBgem_eHg" rel="prettyPhoto" title="Nishtyaki (The Kewl Things)"><img src="http://dl.dropbox.com/u/939165/camera_icon.png" alt="Concert in RockCity Club, Bryansk" width="48" /></a>
+<a href="https://www.youtube.com/watch?v=vl9hXpPFwBY" rel="prettyPhoto" title="Ne parish (You Not Stir Me Up)"><img src="http://dl.dropbox.com/u/939165/camera_icon.png" alt="Concert in RockCity Club, Bryansk" width="48" /></a>
+<a href="https://www.youtube.com/watch?v=hRTBOGRBMKo" rel="prettyPhoto" title="Gop-srop (Stick Up)"><img src="http://dl.dropbox.com/u/939165/camera_icon.png" alt="Concert in RockCity Club, Bryansk" width="48" /></a>
+<a href="https://www.youtube.com/watch?v=10adQvz-RRQ" rel="prettyPhoto" title="Outro"><img src="http://dl.dropbox.com/u/939165/camera_icon.png" alt="Concert in RockCity Club, Bryansk" width="48" /></a>
+<a href="https://www.youtube.com/watch?v=kGKTUlrZzB8" rel="prettyPhoto" title="Bespontovy (Crumby)"><img src="http://dl.dropbox.com/u/939165/camera_icon.png" alt="Concert in RockCity Club, Bryansk" width="48" /></a>
 </div>
   
 <?php include("../includes/en/footer.php"); ?>
@@ -62,7 +69,7 @@ div.ywp-common-tooltip {display:none;}
     var YWPParams = 
     {
         autoplay: false,
-        displaystate: 1,
+        displaystate: 0,
         volume: 0.5
     };
 </script>
