@@ -1,5 +1,11 @@
 <->
-<img src="http://openclipart.org/image/100px/svg_to_png/164299/elvis.png" alt="Elvis" title="Elvis by luchapress (/user-detail/luchapress)" /> We're playing in "Rock-City Club" in Bryansk on 31 of May. We're hope to get some nice video for our "Video" section from this gig. If you'll be in Bryansk at this date we're welcome you to come to hear us.
+<img src="http://openclipart.org/image/100px/svg_to_png/164299/elvis.png" alt="Elvis" title="Elvis by by openclipart.org" />We're playing in "Rock-City Club" (Bryansk) at Sunday, 8 of July. Hope it will be great! Other bands are 'Scholastica' and 'Nav'
+<->
+<img src="http://dl.dropbox.com/u/939165/johnny_automatic_surprise.png" alt="surprise" title="surprise by openclipart.org" />Accidentaly we've found our remix "Bespontovy" as background music for some <a href="https://www.youtube.com/watch?v=n5TiMrXvX1k">trailer</a>, made by some English guys. Great!
+<->
+<img src="http://dl.dropbox.com/u/939165/Anonymous_funny_music_note.png" alt="funny music note" title="funny music note by openclipart.org" /> New remix arrived! Our friend Alexei Babashov &lt;aka Lekseich&gt; gotta 'Nishtyaki' covered. Take a look into <a href="/en/music">Media</a> section!
+<->
+<img src="http://openclipart.org/image/100px/svg_to_png/164299/elvis.png" alt="Elvis" title="Elvis by by openclipart.org" /> We're playing in "Rock-City Club" in Bryansk on 31 of May. We're hope to get some nice video for our "Video" section from this gig. If you'll be in Bryansk at this date we're welcome you to come to hear us.
 <->
 Finally we there! Netlabel <a href="http://blocsonic.com" title="blocSonic">blocSonic</a> released our mini-album! You can view and download album with great booklet and cover art <a href="http://blocsonic.com/releases/show/gryaznyj-albom" title="blocSonic release">here</a> or in <a href="music">MEDIA</a> section of this website.
 <->
