@@ -1,5 +1,11 @@
 <->
-<img src="http://openclipart.org/image/100px/svg_to_png/164299/elvis.png" alt="Elvis" title="Elvis by luchapress (/user-detail/luchapress)" />31 мая играем в "Рок-сити клуб", в том, который открылся вместо быдлодискотеки "Турист". Обещали, что кондиционеры заработают как раз 31-го. Так что будем открывать климатконтроль. Начало в 20:00. Кто придёт до 19:00 - проход бесплатно. Можно будет бесплатно разжиться свежевыпущенным EP. Велкоме!
+<img src="http://openclipart.org/image/100px/svg_to_png/164299/elvis.png" alt="Elvis" title="Elvis by by openclipart.org" />8 июля выступаем в <a href="http://vk.com/club36529320">"Рок-сити клуб"</a> (Брянск), вместе с гр. "Схоластика" и "Навь". Начало в 18-00. Вход - свободный!
+<->
+<img src="http://dl.dropbox.com/u/939165/johnny_automatic_surprise.png" alt="surprise" title="surprise by openclipart.org" />Случайно в сети найден некий <a href="https://www.youtube.com/watch?v=n5TiMrXvX1k">трейлер</a>, сделанный, судя по всему, в Англии, фоновой музыкой к которому, к нашему удивлению и радости служит ремикс на "Беспонтовы"!
+<->
+<img src="http://dl.dropbox.com/u/939165/Anonymous_funny_music_note.png" alt="funny music note" title="funny music note by openclipart.org" /> Появился новый ремикс! Наш друг, Алексей Бабашов &lt;ака Lekseich&gt; на этот раз поработал с треком "Ништяки". Прослушать можно в разделе <a href="/music">ФАЙЛЫ</a>!
+<->
+<img src="http://openclipart.org/image/100px/svg_to_png/164299/elvis.png" alt="elvis" title="elvis by openclipart.org" />31 мая играем в "Рок-сити клуб", в том, который открылся вместо быдлодискотеки "Турист". Обещали, что кондиционеры заработают как раз 31-го. Так что будем открывать климатконтроль. Начало в 20:00. Кто придёт до 19:00 - проход бесплатно. Можно будет бесплатно разжиться свежевыпущенным EP. Велкоме!
 <->
 Ура! Нетлейбл <a href="http://blocsonic.com" title="blocSonic">blocSonic</a> выпустил наш мини альбом! Просмотреть и загрузить его вместе с превосходным буклетом и обложкой в трёх вариантах &lt;английском/русском/транслите&gt; можно по <a href="http://blocsonic.com/releases/show/gryaznyj-albom" title="blocSonic release">этому</a> адресу или в разделе <a href="music">ФАЙЛЫ</a> этого сайта.
 <->
